fix menu items mobile collapse

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -4,7 +4,7 @@ img {
 }
 
 .btn {
-    background: #EB5757;
+    background: #A81722;
     border-radius: 10px;
     width: 190px;
     height: 42px;
@@ -12,7 +12,7 @@ img {
 }
 
 .btn:hover {
-    background-color: #FFB2B2;
+    background-color: #EB5757;
 }
 
 .navbar-toggler-icon {
@@ -33,6 +33,16 @@ img {
     @media screen and (min-width: 990px) {
         width: 70%;
     }
+
+    @media screen and (max-width: 990px) {
+        width: 100vw;
+        height: 100vh;
+        overflow-x: visible;
+    }
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
 
 .collapse > ul {
@@ -42,5 +52,11 @@ img {
 .nav-link {
     @media screen and (max-width: 990px) {
         display: flex;
+    }
+}
+
+a {
+    @media screen and (max-width: 990px) {
+        color: black !important;
     }
 }
